[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bluesky-dataforge"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["bluesky>=1.12", "numpy>=1.24"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bluesky_dataforge._native"
manifest-path = "crates/dataforge-python/Cargo.toml"
python-source = "python"
