[package]
name = "dataforge-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dataforge-core = { path = "../dataforge-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2", features = ["serde"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
