[package]
name = "dataforge-python"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "bluesky_dataforge"
crate-type = ["cdylib"]

[dependencies]
dataforge-core = { path = "../dataforge-core" }
dataforge-engine = { path = "../dataforge-engine" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
serde_json = "1"
parking_lot = "0.12"
tracing = "0.1"
mongodb = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
bson = { version = "3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
